// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateOneResolver should generate graphql schema for CreateOneCompanyResolver 1`] = `
"type Address {
  street: String!
}

type User {
  id: String!
  name: String!
  address: Address!
}

type Company {
  id: String!
  name: String!
  description: String
  founder: User!
  ceo: User
  cto: User
}

type Mutation {
  createOneCompany(data: CompanyCreateInput): Company!
}

input CompanyCreateInput {
  name: String
  founder: UserCoOneWithoutCompanyCreateInput
}

input UserCoOneWithoutCompanyCreateInput {
  connect: ConnectRelationInput
}

input ConnectRelationInput {
  id: String
}"
`;

exports[`CreateOneResolver should generate graphql schema for CreateOneGroupResolver 1`] = `
"type Address {
  street: String!
}

type User {
  id: String!
  name: String!
  address: Address!
}

type Group {
  id: String!
  name: String!
  description: String!
  founders: [User!]!
  coordinator: [User!]
  finance: [User!]
}

type Mutation {
  createOneGroup(data: GroupCreateInput): Group!
}

input GroupCreateInput {
  name: String
  description: String
  founders: UserCoManyWithoutGroupCreateInput
}

input UserCoManyWithoutGroupCreateInput {
  connect: [ConnectRelationInput!]
}

input ConnectRelationInput {
  id: String
}"
`;

exports[`CreateOneResolver should generate graphql schema for CreateOneUserResolver 1`] = `
"type Address {
  street: String!
}

type User {
  id: String!
  name: String!
  address: Address!
}

type Mutation {
  createOneUser(data: UserCreateInput): User!
}

input UserCreateInput {
  name: String
  address: AddressEmbeddedInput
}

input AddressEmbeddedInput {
  street: String
}"
`;
